# game

./: .gitignore  CMakeLists.txt  main.cpp  mingw32.toolchain
android/: build.gradle  local.properties
android/SDL2/: build.gradle
android/app/: build.gradle
assets/animations/: ani_mapIcon.xml  ani_maparrow (Case Conflict).xml  ani_selectName.xml
assets/maps/: Players.tsx  collect1.tmx  race_lvl.tmx  sutton.tmx  tiles.tsx
assets/shaders/: blur.frag  blur.vs  default.frag  default.vs  scale.frag  scale.vs
assets/textures/: Atlas.xml  (+1 more)
game/: Banner.cpp  Banner.hpp  KeyIcon.cpp  KeyIcon.hpp  ObjectBlock.cpp  ObjectBlock.hpp  ObjectBlockHalf.cpp  ObjectBlockHalf.hpp  ObjectCollectible.cpp  ObjectCollectible.hpp  ObjectHUD.cpp  ObjectHUD.hpp  ObjectHill1.cpp  ObjectHill1.hpp  ObjectHill2.cpp  ObjectHill2.hpp  ObjectHill3.cpp  ObjectHill3.hpp  ObjectPlatform.cpp  ObjectPlatform.hpp  ObjectPlayer.cpp  ObjectPlayer.hpp  ObjectPlayerSelect.cpp  ObjectPlayerSelect.hpp  PlayerInfo.cpp  PlayerInfo.hpp  Wheel.cpp  Wheel.hpp
src/: Atlas.cpp  Atlas.hpp  BatchRenderer.cpp  BatchRenderer.hpp  CollisionInfo.hpp  Color.cpp  Color.hpp  ControlScheme.cpp  ControlScheme.hpp  ConvexShape.cpp  ConvexShape.hpp  Drawable.cpp  Drawable.hpp  FileSystem.hpp  FileUtil.cpp  FileUtil.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Level.cpp  Level.hpp  Logger.hpp  MapPath.hpp  Mask.cpp  Mask.hpp  Object.cpp  Object.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  TextureQuad.cpp  TextureQuad.hpp  (+11 more)
(+8 files in other folders)
